# torvex-extract

./: .gitignore  LICENSE  README.md  pyproject.toml  torvex-unirec-velox.ipynb
scripts/: overlay_formula_bboxes.py  pure_mfr_smoke.py  smoke_engine_contract.py  smoke_profile_extract.py
src/torvex_extract/: __init__.py  cli.py  formula_extractor.py  formula_pipeline.py  ocr_engine.py  onnx_runtime.py  ppocrv6_ocr.py  pure_onnx_mfr.py  pure_onnx_unimernet.py  pypdfium_extractor.py  table_extractor.py  table_structure.py  unirec_recognizer.py  visual_zoning.py
tests/: test_api_import.py  test_formula_runtime.py  test_omnidocbench_markdown.py  test_ppocrv6_ocr.py
tools/omnidocbench_eval/scripts/: compare_runs.py  converter.py  detection_miss_analysis.py  formula_loss_attribution.py  gap_diagnosis.py  gen_raw_predictions.py  make_subset.py  mfd_formula_detection_eval.py  omnidocbench_markdown.py  ppdoclayout_formula_detection_eval.py  run_torvex_subset.py  split_direct_test.py  split_recovery_analysis.py  unirec_recognizer.py  yolov8ft_formula_detection_eval.py
