[project]
name = "torvex-extract"
version = "0.1.0"
description = "PDF extraction engine for Torvex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdfium2>=4.0.0",
    "pdfplumber>=0.10.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "opencv-python>=4.13.0.92",
    "onnxtr>=0.8.1",
    "psutil>=7.2.2",
    "onnxruntime-gpu[cuda,cudnn]==1.26.0",
]

[project.scripts]
torvex-extract = "torvex_extract.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
